--- a/style/style.css
+++ b/style/style.css
@@ -33,6 +33,14 @@ body{
 .contentbox img{
     position: absolute;
     cursor: pointer;
+    transform: scale(1);
+    transition: all 0.3s linear;
+    
+}
+.contentbox img:hover{
+    transform: scale(1.1);
+    transition: all 0.3s linear;
+
 }
 .contentbox__sale{
     font-size: 40px;
@@ -274,3 +282,5 @@ transition: opacity 1s ease 0s;
     border: 2px gray dashed;
     padding: 10px;
 }
+
+
