--- a/style/style.css
+++ b/style/style.css
@@ -16,6 +16,8 @@ body{
     background-color: #e3f8fc;
     padding: 20px 0;
 }
+
+
 .container{
     max-width: 900px;
     margin: 0 auto;
@@ -71,7 +73,7 @@ h3{
     border-radius: 6px;
     position: absolute;
     top: 40%;
-    transform: translate(50%,-50%);
+    transform: translate(43%,-50%);
 
 }
 
@@ -123,9 +125,10 @@ h3{
     border-radius: 6px; 
     position: absolute;
     top: 36%;
-    left: 21%;
-    transform: translate(50%,-50%);
+    
+    transform: translate(60%,-50%);
     cursor: pointer;
+    z-index: 2;
 }
 .accept__close{
     width: 30px;
