--- a/style/style.css
+++ b/style/style.css
@@ -22,12 +22,14 @@ body{
     max-width: 900px;
     margin: 0 auto;
     position: relative;
+    overflow: hidden;
 }
 .content{
+    max-width: 100%;
+    height: 100vh;
     display: grid;
     grid-template-columns: repeat(3,1fr);
     margin-top: 20px;
-    height: 100vh;
 }
 .contentbox{
     position: relative;
@@ -54,7 +56,7 @@ body{
    right: 50%;
 }
 h3{
-    font-size: 26px;
+    font-size: 22px;
     background: #0a2633;
     color: white;
     height: 60px;
@@ -62,6 +64,7 @@ h3{
     justify-content: center;
     align-items: center;
     border-radius: 6px;
+    width: 100%;
 }
 
 .popup__empty{
@@ -116,19 +119,17 @@ h3{
 }
 
 .popup__accept{
-    margin-top: 30px;
+    
     width: 400px;
     height: 290px;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: #fff;
-    position: relative;
     border-radius: 6px; 
     position: absolute;
     top: 36%;
-    
-    transform: translate(60%,-50%);
+    transform: translate(50%,-50%);
     cursor: pointer;
     z-index: 2;
 }
@@ -211,10 +212,8 @@ transition: opacity 1s ease 0s;
     cursor: pointer;
 }
 .offer{
-    
-    width: 465px;
+    max-width: 460px;
     height: 813px;
-   
     border-radius: 6px;
     display: flex;
     flex-direction: column;
@@ -290,3 +289,78 @@ transition: opacity 1s ease 0s;
 }
 
 
+@media (max-width: 800px) {
+    .content{
+        height: 80vh;
+    }
+
+    .popup__empty{
+        width: 400px;
+        height: 268px;
+        border-radius: 6px;
+        position: absolute;
+        top: 50%;
+        transform: translate(40%,-50%);
+    
+    }
+    .empty__cyrcle{
+        width: 60px;
+        height: 60px;
+        background-color: rgba(0, 128, 0, 0.4);
+        border-radius: 50%;   
+        position: relative;
+       }
+       .empty__cyrcle::before{
+           top: 5px;
+           left: 5px;
+           width: 50px;
+        height: 50px;
+
+       }
+       .popup__accept{
+        width: 350px;
+        height: 290px;
+         padding-left: 10px;
+        transform: translate(40%,-55%);
+        
+    }
+}
+@media (max-width: 600px) {
+    h3{
+        font-size: 18px;
+        margin-bottom: 10px;
+    }
+    .content{
+        height: 60vh;
+    }
+    .popup__empty{
+        width: 300px;
+        height: 268px;
+        border-radius: 6px;
+        position: absolute;
+        top: 60%;
+        transform: translate(40%,-50%);
+    
+    }
+    .popup__accept{
+        width: 350px;
+        height: 290px;
+         padding-left: 10px;
+        transform: translate(20%,-55%);
+        
+    }
+    /* .offer{
+        width: 465px;
+        
+        border-radius: 6px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        margin: 0 auto;
+        height: 0px;
+        overflow: hidden;
+        
+    } */
+   
+}
