--- a/style/style.css
+++ b/style/style.css
@@ -244,6 +244,7 @@ transition: opacity 1s ease 0s;
     font-size: 18px;
 }
 .form{
+    width: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -349,18 +350,50 @@ transition: opacity 1s ease 0s;
         transform: translate(20%,-55%);
         
     }
-    /* .offer{
-        width: 465px;
-        
+
+   
+}
+@media (max-width: 400px) {
+    h3{
+        font-size: 18px;
+        margin-bottom: 10px;
+    }
+    .content{
+        height: 60vh;
+    }
+    .popup__empty{
+        width: 300px;
+        height: 268px;
         border-radius: 6px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center;
-        margin: 0 auto;
-        height: 0px;
-        overflow: hidden;
+        position: absolute;
+        top: 60%;
+        transform: translate(17%,-70%);
+    
+    }
+    .popup__accept{
+        width: 300px;
+        height: 240px;
+         padding-left: 10px;
+        transform: translate(12%,-70%);
         
-    } */
+    }
+    .accept__cyrcle{
+        width: 80px;
+        height: 80px;
+    }
+    .accept__cyrcle::after{
+        top: 20px;
+    }
+    .accept__title{
+        font-size: 28px;
+        margin-top: 50px;
+    }
+    .accept__subtitle{
+        margin-top: 18px;
+       
+    }
+    .btn__accept{
+        margin-top: 20px;
+    }
    
 }
