--- a/style/style.css
+++ b/style/style.css
@@ -119,7 +119,6 @@ h3{
 }
 
 .popup__accept{
-    
     width: 400px;
     height: 290px;
     display: flex;
@@ -327,6 +326,11 @@ transition: opacity 1s ease 0s;
     }
 }
 @media (max-width: 600px) {
+    .contentbox__sale{
+        font-size: 30px;
+        
+       right: 40%;
+    }
     h3{
         font-size: 18px;
         margin-bottom: 10px;
@@ -336,9 +340,6 @@ transition: opacity 1s ease 0s;
     }
     .popup__empty{
         width: 300px;
-        height: 268px;
-        border-radius: 6px;
-        position: absolute;
         top: 60%;
         transform: translate(40%,-50%);
     
@@ -365,7 +366,6 @@ transition: opacity 1s ease 0s;
         width: 300px;
         height: 268px;
         border-radius: 6px;
-        position: absolute;
         top: 60%;
         transform: translate(17%,-70%);
     
